--- a/public/main.html
+++ b/public/main.html
@@ -8,6 +8,8 @@
 </head>
 <body>
     <h1>hello world from html file</h1>
-    
+    <div>
+        <h2>Another title</h2>
+    </div>
 </body>
 </html>
